--- a/Credit Card Customer Segmentation.ipynb
+++ b/Credit Card Customer Segmentation.ipynb
@@ -18,23 +18,23 @@
     "Following is the Data Dictionary for Credit Card dataset :-\n",
     "\n",
     "- CUST_ID : Identification of Credit Card holder (Categorical)\n",
-    "-BALANCE : Balance amount left in their account to make purchases (\n",
-    "-BALANCE_FREQUENCY : How frequently the Balance is updated, score between 0 and 1 (1 = frequently updated, 0 = not frequently updated)\n",
-    "-PURCHASES : Amount of purchases made from account\n",
-    "-ONEOFF_PURCHASES : Maximum purchase amount done in one-go\n",
-    "-INSTALLMENTS_PURCHASES : Amount of purchase done in installment\n",
-    "-CASH_ADVANCE : Cash in advance given by the user\n",
-    "-PURCHASES_FREQUENCY : How frequently the Purchases are being made, score between 0 and 1 (1 = frequently purchased, 0 = not frequently purchased)\n",
-    "-ONEOFFPURCHASESFREQUENCY : How frequently Purchases are happening in one-go (1 = frequently purchased, 0 = not frequently purchased)\n",
-    "-PURCHASESINSTALLMENTSFREQUENCY : How frequently purchases in installments are being done (1 = frequently done, 0 = not frequently done)\n",
-    "-CASHADVANCEFREQUENCY : How frequently the cash in advance being paid\n",
-    "-CASHADVANCETRX : Number of Transactions made with \"Cash in Advanced\"\n",
-    "-PURCHASES_TRX : Numbe of purchase transactions made\n",
-    "-CREDIT_LIMIT : Limit of Credit Card for user\n",
-    "-PAYMENTS : Amount of Payment done by user\n",
-    "-MINIMUM_PAYMENTS : Minimum amount of payments made by user\n",
-    "-PRCFULLPAYMENT : Percent of full payment paid by user\n",
-    "-TENURE : Tenure of credit card service for user\n",
+    "- BALANCE : Balance amount left in their account to make purchases (\n",
+    "- BALANCE_FREQUENCY : How frequently the Balance is updated, score between 0 and 1 (1 = frequently updated, 0 = not frequently updated)\n",
+    "- PURCHASES : Amount of purchases made from account\n",
+    "- ONEOFF_PURCHASES : Maximum purchase amount done in one-go\n",
+    "- INSTALLMENTS_PURCHASES : Amount of purchase done in installment\n",
+    "- CASH_ADVANCE : Cash in advance given by the user\n",
+    "- PURCHASES_FREQUENCY : How frequently the Purchases are being made, score between 0 and 1 (1 = frequently purchased, 0 = not frequently purchased)\n",
+    "- ONEOFFPURCHASESFREQUENCY : How frequently Purchases are happening in one-go (1 = frequently purchased, 0 = not frequently purchased)\n",
+    "- PURCHASESINSTALLMENTSFREQUENCY : How frequently purchases in installments are being done (1 = frequently done, 0 = not frequently done)\n",
+    "- CASHADVANCEFREQUENCY : How frequently the cash in advance being paid\n",
+    "- CASHADVANCETRX : Number of Transactions made with \"Cash in Advanced\"\n",
+    "- PURCHASES_TRX : Numbe of purchase transactions made\n",
+    "- CREDIT_LIMIT : Limit of Credit Card for user\n",
+    "- PAYMENTS : Amount of Payment done by user\n",
+    "- MINIMUM_PAYMENTS : Minimum amount of payments made by user\n",
+    "- PRCFULLPAYMENT : Percent of full payment paid by user\n",
+    "- TENURE : Tenure of credit card service for user\n",
     "\n",
     "get data here https://www.kaggle.com/datasets/arjunbhasin2013/ccdata"
    ]
