--- a/Credit Card Customer Segmentation.ipynb
+++ b/Credit Card Customer Segmentation.ipynb
@@ -34,9 +34,7 @@
     "- PAYMENTS : Amount of Payment done by user\n",
     "- MINIMUM_PAYMENTS : Minimum amount of payments made by user\n",
     "- PRCFULLPAYMENT : Percent of full payment paid by user\n",
-    "- TENURE : Tenure of credit card service for user\n",
-    "\n",
-    "get data here https://www.kaggle.com/datasets/arjunbhasin2013/ccdata"
+    "- TENURE : Tenure of credit card service for user"
    ]
   },
   {
